force-app/main/default/objects/EC_InformaticaAuditTable__c/EC_InformaticaAuditTable__c.object-meta.xml
<CustomObject>
    <label>InformaticaAuditTable</label>
    <nameField>
        <label>InformaticaAuditTable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InformaticaAuditTable</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>