force-app/main/default/objects/EC_InformaticaAuditTable__c/fields/EC_FailedRecords__c.field-meta.xml
<CustomField>
    <fullName>EC_FailedRecords__c</fullName>
    <label>Failed Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>