force-app/main/default/objects/EC_InformaticaAuditTable__c/fields/EC_IndexBatchRan__c.field-meta.xml
<CustomField>
    <fullName>EC_IndexBatchRan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Index Batch Ran</label>
    <type>Checkbox</type>
</CustomField>