force-app/main/default/objects/EC_InformaticaAuditTable__c/fields/EC_JobEndTime__c.field-meta.xml
<CustomField>
    <fullName>EC_JobEndTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Job End Time</label>
    <type>DateTime</type>
</CustomField>