force-app/main/default/objects/EC_InformaticaAuditTable__c/fields/EC_JobName__c.field-meta.xml
<CustomField>
    <fullName>EC_JobName__c</fullName>
    <label>Job Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>