force-app/main/default/objects/EC_InformaticaAuditTable__c/fields/EC_JobStartTime__c.field-meta.xml
<CustomField>
    <fullName>EC_JobStartTime__c</fullName>
    <label>Job Start Time</label>
    <type>DateTime</type>
</CustomField>