force-app/main/default/objects/EC_InformaticaAuditTable__c/fields/EC_Processed__c.field-meta.xml
<CustomField>
    <fullName>EC_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>