force-app/main/default/objects/EC_InformaticaAuditTable__c/fields/EC_TotalNumberofRecords__c.field-meta.xml
<CustomField>
    <fullName>EC_TotalNumberofRecords__c</fullName>
    <label>Total Number of Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>