force-app/main/default/objects/EC_InformaticaAuditTable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EC_JobName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>EC_JobEndTime__c</columns>
    <columns>EC_JobStartTime__c</columns>
    <columns>EC_Processed__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>